implement login & social login plugin

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
+    <meta name="google-signin-client_id" content="682784712996-65cbu37faq1lu6lc94erb48uf53cdka9.apps.googleusercontent.com">
+
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
