--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Klikgo Ionic 5</title>
 
     <base href="/" />
 
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
-    <meta name="google-signin-client_id" content="682784712996-65cbu37faq1lu6lc94erb48uf53cdka9.apps.googleusercontent.com">
+    <meta
+      name="google-signin-client_id"
+      content="682784712996-65cbu37faq1lu6lc94erb48uf53cdka9.apps.googleusercontent.com"
+    />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-</head>
 
-<body>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyD6GzYrB0hMTzKUS9DK9yK1iv0eA5X-nhI"></script>
+  </head>
+
+  <body>
     <app-root></app-root>
-</body>
-
+  </body>
 </html>
