--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyD6GzYrB0hMTzKUS9DK9yK1iv0eA5X-nhI"></script>
-  </head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 
   <body>
     <app-root></app-root>
