--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
     <meta
       name="google-signin-client_id"
-      content="682784712996-65cbu37faq1lu6lc94erb48uf53cdka9.apps.googleusercontent.com"
+      content="852595832919-73lbej9udcco4jnpnuegraik09rmmbrh.apps.googleusercontent.com"
     />
 
     <!-- add to homescreen for ios -->
@@ -25,10 +25,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyD6GzYrB0hMTzKUS9DK9yK1iv0eA5X-nhI"></script>
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  </head>
 
   <body>
     <app-root></app-root>
