--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyD6GzYrB0hMTzKUS9DK9yK1iv0eA5X-nhI"></script>
+    <script
+      src="https://maps.google.com/maps/api/js?key=AIzaSyC3whaMKEMStxnvH3Eu6bunIvGXI_8dN4I&libraries=places"
+      defer
+    ></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
